--- a/resources/public/content/stylesheet.css
+++ b/resources/public/content/stylesheet.css
@@ -224,20 +224,20 @@ li.nav-item a:active { background: gray; color: white; }
 	width: 30%;
 	float: right;
   position: fixed;
-  bottom: 1.5em;
+  bottom: 3.5em;
   right: 0;
-	z-index: 150;
+	z-index: 175;
   background: transparent;
 }
 
 /* about-cookies box: permanently visible part of cookies information box */
 #about-cookies {
   clear: right;
-  width: 10em;
   font-size: 66%;
   float: right;
   text-align: right;
   padding: 0.25em 2em;
+  border-radius: 0.25em;
 	color: white;
   background:rgba(40,40,40,0.8);
 }
@@ -245,7 +245,8 @@ li.nav-item a:active { background: gray; color: white; }
 /* more-about-cookies box, normally hidden */
 #more-about-cookies {
   display: none;
-	padding: 0.25em 2em;
+	padding: 0.5em 2em;
+  border-radius: 0.5em;
 	color: white;
   background:rgba(40,40,40,0.8);
 	border-bottom: thin solid white;
@@ -277,7 +278,9 @@ li.nav-item a:active { background: gray; color: white; }
 .minor-controls {
   list-style: none;
   float: right;
+  right: 0;
   padding: 0.25em 2em;
+  border-radius: 0.25em;
   color: white;
   background:rgba(40,40,40,0.8);
   font-size: 66%;
