--- a/resources/templates/edit-user.html
+++ b/resources/templates/edit-user.html
@@ -4,28 +4,28 @@
         <div id="content" class="edit">
             <form action="{{servlet-context}}/edit-user" method="POST">
               <p class="widget">
-                <label for="target">Username</label>
+                <label for="target">{{config.username-prompt}}</label>
                 <input type="text" name="target" id="target" value="{{target}}" required/>
               </p>
                 <p class="widget">
-                    <label for="pass1">New password</label>
+                    <label for="pass1">{{config.new-pass-prompt}}</label>
                     <input name="pass1" id="pass1" type="password"/>
                 </p>
                 <p class="widget">
-                    <label for="pass2">And again</label>
+                    <label for="pass2">{{config.rpt-pass-prompt}}</label>
                     <input name="pass2" id="pass2" type="password"/>
                 </p>
                 <p class="widget">
-                    <label for="email">Email address</label>
+                    <label for="email">{{config.email-prompt}}</label>
                     <input name="email" id="email" type="text" value="{{details.email}}" required/>
                 </p>
                 <p class="widget">
-                    <label for="admin">Is administrator?</label>
+                    <label for="admin">{{config.is-admin-prompt}}</label>
                     <input name="admin" id="admin" type="checkbox" {% if details.admin %}checked{% endif %}/>
                 </p>
                 <p class="widget">
-                    <label for="submit">When you have finished editing</label>
-                    <input name="submit" id="submit" type="submit" class="action" value="Save!"/>
+                    <label for="submit">{{config.save-prompt}}</label>
+                    <input name="submit" id="submit" type="submit" class="action" value="{{config.save-label}}"/>
                 </p>
             </form>
         </div>
