--- a/resources/templates/passwd.html
+++ b/resources/templates/passwd.html
@@ -3,20 +3,20 @@
         <div id="content" class="auth">
             <form action="{{servlet-context}}/passwd" method="POST">
                 <p class="widget">
-                    <label for="oldpass">Your password</label>
+                    <label for="oldpass">{{config.old-pass-prompt}}</label>
                     <input name="oldpass" id="oldpass" type="password" required/>
                 </p>
                 <p class="widget">
-                    <label for="pass1">New password</label>
+                    <label for="pass1">{{config.new-pass-prompt}}</label>
                     <input name="pass1" id="pass1" type="password" required/>
                 </p>
                 <p class="widget">
-                    <label for="pass2">And again</label>
+                    <label for="pass2">{{config.rpt-pass-prompt}}</label>
                     <input name="pass2" id="pass2" type="password" required/>
                 </p>
                 <p class="widget">
-                    <label for="submit">To edit this wiki</label>
-                    <input name="action" id="action" type="submit" class="action" value="Change password!"/>
+                    <label for="submit">{{config.change-pass-prompt}}</label>
+                    <input name="action" id="action" type="submit" class="action" value="{{config.change-pass-link}}!"/>
                 </p>
             </form>
         </div>
