#18: A lot better, but not there yet
Looks fine on desktops. On phones the wiki page looks reasonable, but for some reason I can't yet fathom has a huge right margin; tablets I haven't tackled yet.

--- a/resources/templates/history.html
+++ b/resources/templates/history.html
@@ -1,7 +1,7 @@
 {% extends "templates/base.html" %}
 {% block content %}
    <div id="content" class="history">
-     <table>
+     <table class="music-ruled">
        <tr>
          <th>{{config.when-col-hdr}}</th>
          <th>{{config.what-col-hdr}}</th>
