--- a/resources/public/css/tablet.css
+++ b/resources/public/css/tablet.css
@@ -42,13 +42,13 @@ body {
   display: none;
 }
 
-#nav ul li {
+#nav menu li {
   padding: 0;
   margin: 0;
   display: inline;
 }
 
-#nav ul li a {
+#nav menu li a {
   color: white;
   text-decoration: none;
   font-weight: bold;
