--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -3,8 +3,13 @@
   <head>
     <title>{{config.site-title}}: {{title}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{{servlet-context}}/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{servlet-context}}/content/stylesheet.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{servlet-context}}/css/print.css" media="print" rel="stylesheet" type="text/css" />
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     {% block extra-headers %}
     {% endblock %}
   </head>
