--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -79,7 +79,7 @@
          <div>
            <img height="16" width="16" alt="one wiki to rule them all" src="img/smeagol.png"/>One Wiki to rule them all ||
            Smeagol wiki engine {{version}} ||
-           <img height="16" width="16" alt="The Web Engineering Factory &amp; Toolworks" src="http://www.weft.scot/images/weft.logo.64.png"> Developed by <a href="http://www.weft.scot/">WEFT</a>
+           <img height="16" width="16" alt="The Web Engineering Factory &amp; Toolworks" src="https://www.weft.scot/images/weft.logo.64.png"> Developed by <a href="http://www.weft.scot/">WEFT</a>
          </div>
          <div>
            Built with <a href="http://www.luminusweb.net/">LuminusWeb</a> ||
