--- a/resources/templates/wiki.html
+++ b/resources/templates/wiki.html
@@ -1,5 +1,18 @@
 {% extends "templates/base.html" %}
 
+{% block extra-headers %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vega/3.0.0-rc2/vega.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vega-lite/2.0.0-beta.10/vega-lite.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vega-embed/3.0.0-beta.19/vega-embed.js"></script>
+
+  <style media="screen">
+    /* Add space between Vega-Embed links  */
+    .vega-actions a {
+      margin-right: 5px;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
     <div id="content" class="wiki">
       {% if editable %}
