Experimental tidying up after vega introduction
None of this is very significant, but it is small improvements.

--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -1,7 +1,7 @@
 {% extends "templates/base.html" %}
 {% block extra-headers %}
-    <link rel="stylesheet" href="{{servlet-context}}/vendor/simplemde/dist/simplemde.min.css">
-    <script src="{{servlet-context}}/vendor/simplemde/dist/simplemde.min.js"></script>
+{% style "/vendor/simplemde/dist/simplemde.min.css" %}
+{% script "/vendor/simplemde/dist/simplemde.min.js" %}
 {% endblock %}
 
 {% block content %}
