--- a/resources/templates/wiki.html
+++ b/resources/templates/wiki.html
@@ -2,7 +2,9 @@
 
 {% block extra-headers %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vega/3.0.0-rc2/vega.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vega-lite/2.0.0-beta.10/vega-lite.js"></script>
+<!-- there's at the time of writing (20170731) a problem with the dependencies of the Bower
+package for vega-embed, so we're currently not installing either it or Vega locally. TODO: fix -->
+  {% script "/vendor/vega-lite/build/vega-lite.js" %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vega-embed/3.0.0-beta.19/vega-embed.js"></script>
 
   <style media="screen">
