--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -5,8 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{{servlet-context}}/content/stylesheet.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="{{servlet-context}}/css/print.css" media="print" rel="stylesheet" type="text/css" />
+    {% style "/content/stylesheet.css" %}
     {% block extra-headers %}
     {% endblock %}
   </head>
