--- a/resources/public/content/stylesheet.css
+++ b/resources/public/content/stylesheet.css
@@ -35,7 +35,7 @@ del {
 }
 
 div.content, form, p, pre, h1, h2, h3, h4, h5 {
-  padding: 0.25em 5%;
+  padding: 0.1em 5% 0 5%;
 }
 
 dl, menu, ol, table, ul {
