--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -7,6 +7,7 @@
 {% block content %}
         <div id="content" class="edit">
             <form action="{{servlet-context}}/edit" method="POST">
+                {% csrf-field %}
                 <input type="hidden" name="page" value="{{page}}"/>
                 <textarea name="src" id="src" rows="25" cols="80">{{content}}</textarea>
                 <p class="widget">
