--- a/resources/templates/edit-user.html
+++ b/resources/templates/edit-user.html
@@ -5,28 +5,28 @@
             <form action="{{servlet-context}}/edit-user" method="POST">
                 {% csrf-field %}
                 <p class="widget">
-                    <label for="target">{{config.username-prompt}}</label>
+                    <label for="target">{% i18n username-prompt %}</label>
                     <input type="text" name="target" id="target" value="{{target}}" required {% ifunequal target "" %}disabled{% endifunequal %}/>
                 </p>
                 <p class="widget">
-                    <label for="pass1">{{config.new-pass-prompt}}</label>
+                    <label for="pass1">{% i18n new-pass-prompt %}</label>
                     <input name="pass1" id="pass1" type="password"/>
                 </p>
                 <p class="widget">
-                    <label for="pass2">{{config.rpt-pass-prompt}}</label>
+                    <label for="pass2">{% i18n rpt-pass-prompt %}</label>
                     <input name="pass2" id="pass2" type="password"/>
                 </p>
                 <p class="widget">
-                    <label for="email">{{config.email-prompt}}</label>
+                    <label for="email">{% i18n email-prompt %}</label>
                     <input name="email" id="email" type="text" value="{{details.email}}" required/>
                 </p>
                 <p class="widget">
-                    <label for="admin">{{config.is-admin-prompt}}</label>
+                    <label for="admin">{% i18n is-admin-prompt %}</label>
                     <input name="admin" id="admin" type="checkbox" {% if details.admin %}checked{% endif %}/>
                 </p>
                 <p class="widget">
-                    <label for="submit">{{config.save-prompt}}</label>
-                    <input name="submit" id="submit" type="submit" class="action" value="{{config.save-label}}"/>
+                    <label for="submit">{% i18n save-prompt %}</label>
+                    <input name="submit" id="submit" type="submit" class="action" value="{% i18n save-label}}"/>
                 </p>
             </form>
         </div>
