--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -11,13 +11,13 @@
                 <input type="hidden" name="page" value="{{page}}"/>
                 <textarea name="src" id="src" rows="25" cols="80">{{content}}</textarea>
                 <p class="widget">
-                    <label for="summary">{{config.what-changed-prompt}}</label>
+                    <label for="summary">{% i18n what-changed-prompt %}</label>
                     <input name="summary" id="summary" type="text"
                         value="{%if exists%}{%else%}New file {{title}}{%endif%}" required/>
                 </p>
                 <p class="widget">
-                    <label for="submit">{{config.save-prompt}}</label>
-                    <input name="submit" id="submit" type="submit" class="action" value="{{config.save-label}}"/>
+                    <label for="submit">{% i18n save-prompt %}</label>
+                    <input name="submit" id="submit" type="submit" class="action" value="{% i18n save-label %}"/>
                 </p>
             </form>
         </div>
