--- a/resources/public/content/stylesheet.css
+++ b/resources/public/content/stylesheet.css
@@ -236,6 +236,14 @@ th {
   color: white;
 }
 
+.pseudo-input {
+  border: inset thin;
+  background-color: white;
+  display: inline-block;
+  min-width: 7.5em;
+  padding: 0 2em 0 0;
+}
+
 .vega-bindings, .vega-actions {
   font-size: 66%;
 }
