Many changes, mainly to content, in preparation for version 1.0.0

--- a/resources/public/content/stylesheet.css
+++ b/resources/public/content/stylesheet.css
@@ -83,6 +83,15 @@ header h1 {
   margin-top: 0;
 }
 
+header a {
+  font-weight: bold;
+  color: white;
+}
+
+header a:hover {
+  color: darkgray;
+}
+
 img {
   border: 0;
   padding: 0;
