Another bit of #44, which got missed somehow.

--- a/resources/templates/upload.html
+++ b/resources/templates/upload.html
@@ -8,7 +8,7 @@
 
               {% i18n file-upload-link-text %}:
 
-              <code>![Uploaded image](content/uploads/{{uploaded}})</code>
+              <code>![Uploaded image](uploads/{{uploaded}})</code>
             </p>
           {% else %}
             <p>
