Fixes to two minor bugs
* Wrong URL printed in upload page;
* 'New file Foo' instead of 'New file Edit Foo' as default git commit message for a new file.

--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -13,7 +13,7 @@
                 <p class="widget">
                     <label for="summary">{% i18n what-changed-prompt %}</label>
                     <input name="summary" id="summary" type="text"
-                        value="{%if exists%}{%else%}New file {{title}}{%endif%}" required/>
+                        value="{%if exists%}{%else%}New file {{page}}{%endif%}" required/>
                 </p>
                 <p class="widget">
                     <label for="submit">{% i18n save-prompt %}</label>
