--- a/resources/templates/upload.html
+++ b/resources/templates/upload.html
@@ -4,7 +4,7 @@
         {% if uploaded %}
           {% if is-image %}
             <p>
-              <img id="uploaded-image" alt="Uploaded image" src="content/uploads/{{uploaded}}"/>
+              <img id="uploaded-image" alt="Uploaded image" src="uploads/{{uploaded}}"/>
 
               {% i18n file-upload-link-text %}:
 
