Added 'list uploaded files' page, only accessible if logged in.

--- a/resources/templates/upload.html
+++ b/resources/templates/upload.html
@@ -34,5 +34,8 @@
                 </p>
             </form>
         {% endif %}
+          <p>
+            Your <a href="list-uploads">uploaded files are listed here</a>.
+          </p>
         </div>
 {% endblock %}
