--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -1,7 +1,12 @@
 {% extends "templates/base.html" %}
 {% block extra-headers %}
-{% style "/vendor/simplemde/dist/simplemde.min.css" %}
-{% script "/vendor/simplemde/dist/simplemde.min.js" %}
+  {% ifequal js-from ":cloudflare" %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplemde/1.11.2/simplemde.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simplemde/1.11.2/simplemde.min.css" rel="stylesheet" type="text/css" />
+  {% else %}
+    {% style "/vendor/simplemde/dist/simplemde.min.css" %}
+    {% script "/vendor/simplemde/dist/simplemde.min.js" %}
+  {% endifequal %}
 {% endblock %}
 
 {% block content %}
