Major restructuring of extension processors, not yet complete

--- a/resources/templates/wiki.html
+++ b/resources/templates/wiki.html
@@ -9,7 +9,7 @@
   <!-- else -->
     <!-- TODO: currently `lein npm install` fails to build packages on all platforms, and
       fails SILENTLY. Consequently setting js-from to local is not advised. Investigting. -->
-    <!-- script "vendor/mermaid/dist/mermaid.js" %}
+    <!-- script "vendor/mermaid/dist/mermaid.js" %} -->
   <!-- endifequal -->
 {% endblock %}
 
