Tactical commit: I'm fairly sure this is close to good.

--- a/resources/templates/list-uploads.html
+++ b/resources/templates/list-uploads.html
@@ -21,10 +21,10 @@
               <th>{{entry.base-name}}</th>
               <td>{{entry.modified}}</td>
               <td>
-              {% if entry.is-image %} ![{{entry.name|capitalize}}](uploads/{{entry.base-name}}) {% else %} [{{entry.name|capitalize}}](uploads/{{entry.base-name}}) {% endif %}
+              {% if entry.is-image %} ![{{entry.name|capitalize}}]({{entry.resource}}) {% else %} [{{entry.name|capitalize}}](uploads/{{entry.resource}}) {% endif %}
               </td>
               <td>
-              {% if entry.is-image %} <img src="uploads/{{entry.base-name}}" alt="{{entry.name|capitalize}}"/> {% else %} <a href="uploads/{{entry.base-name}}">link</a> {% endif %}
+              {% if entry.is-image %} <img src="{{entry.resource}}" alt="{{entry.name|capitalize}}"/> {% else %} <a href="{{entry.resource}}">link</a> {% endif %}
               </td>
 
             </tr>
