--- a/resources/templates/upload.html
+++ b/resources/templates/upload.html
@@ -1,22 +1,25 @@
 {% extends "templates/base.html" %}
 {% block content %}
         <div id="content" class="auth">
-        {% if uploaded %}
-          {% if is-image %}
-            <p>
-              <img id="uploaded-image" alt="Uploaded image" src="uploads/{{uploaded}}"/>
+        {% if has-uploaded %}
+          {% for upload in uploaded %}
+            {{upload.filename}}
+            {% if upload.is-image %)
+              <p>
+                <img id="uploaded-image" alt="Uploaded image" src="{{upload.resource}}"/>
 
-              {% i18n file-upload-link-text %}:
+                {% i18n file-upload-link-text %}:
 
-              <code>![Uploaded image](uploads/{{uploaded}})</code>
-            </p>
-          {% else %}
-            <p>
-              {% i18n file-upload-link-text %}:
+                <code>![{{upload.filename}}]({{upload.resource}})</code>
+              </p>
+            {% else %}
+              <p>
+                {% i18n file-upload-link-text %}:
 
-              <code>[Uploaded file](uploads/{{uploaded}})</code>
-            </p>
-          {% endif %}
+                <code>[{{upload.filename}}]({{upload.resource}})</code>
+              </p>
+            {% endif %}
+          {% endfor %}
         {% else %}
             <form action="{{servlet-context}}/upload" enctype="multipart/form-data" method="POST">
                 {% csrf-field %}
