--- a/resources/templates/wiki.html
+++ b/resources/templates/wiki.html
@@ -2,10 +2,10 @@
 
 {% block extra-headers %}
   <!-- ifequal js-from ":cloudflare" -->
-  {% script "https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe-ui-default.min.js" %}
-  {% script "https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe.min.js" %}
-  {% style "vendor/node_modules/photoswipe/dist/photoswipe.css" %}
-  {% style "vendor/node_modules/photoswipe/dist/default-skin/default-skin.css" %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe-ui-default.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe.min.js"></script>
+  {% style "/vendor/node_modules/photoswipe/dist/photoswipe.css" %}
+  {% style "/vendor/node_modules/photoswipe/dist/default-skin/default-skin.css" %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.4.6/mermaid.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vega/5.9.1/vega.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vega-lite/4.1.1/vega-lite.min.js"></script>
